<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">florida.tony.hw3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="newContact">New</string>
    <string name="home_phone">Home Phone</string>
    <string name="last_name">Last Name</string>
    <string name="display_name">Display Name</string>
    <string name="first_name">First Name</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="contact_list">Contact List</string>
    <string name="display_contact">Display Contact</string>
    <string name="birthday">Birthday</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_phone">Mobile Phone</string>
    <string name="work_phone">Work Phone</string>

</resources>
